--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -195,6 +195,14 @@ body {
     padding: 0 15px;
 }
 
+.w-full {
+    width: 100%;
+}
+
+.h-full {
+    height: 100%;
+}
+
 .row {
     display: -webkit-box;
     display: -moz-box;
@@ -260,6 +268,13 @@ body {
     -ms-justify-content: center;
     -webkit-justify-content: center;
     justify-content: center;
+}
+
+.flex-row-reverse {
+    -webkit-flex-direction: row-reverse;
+    -ms-flex-direction: row-reverse;
+    -moz-flex-direction: row-reverse;
+    flex-direction: row-reverse;
 }
 
 .title-1 {
@@ -10123,6 +10138,94 @@ body.compensate-for-scrollbar .header {
     padding: 0 0 15px;
     font: 600 18px/28px "Eina", sans-serif;
 }
+
+
+.story-inner-top {
+    box-shadow: inset 0 1px 0 0 rgb(0 0 0 / 8%);
+}
+
+.story-banner__style_1 .left_wrap, .story-banner__style_1 .right_wrap {
+    width: 100%;
+    max-width: 50%;
+}
+
+.story-banner__style_2 {
+    min-height: 680px;
+}
+
+.story-banner__style_2 .left_wrap {
+    width: 100%;
+    max-width: 36%;
+}
+
+.story-banner__style_2 .right_wrap {
+    width: 100%;
+    max-width: 64%;
+}
+
+.image {
+    width: 100%;
+    height: 100%;
+}
+
+.image-responsive {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    margin-bottom: 0;
+}
+
+.story-banner__style_1 .story-content {
+    max-width: 40rem;
+    width: 100%;
+    margin: 0 auto;
+}
+
+.story-banner__style_2 .story-content {
+    max-width: 60rem;
+    width: 100%;
+    margin: 0 auto;
+}
+
+.story-content__text {}
+
+.story-content__text h2 {
+    font: 500 80px "Eina", sans-serif;
+    padding-bottom: 24px;
+}
+
+.story-content__text p {
+    font: 500 26px "Eina", sans-serif;
+    padding-bottom: 48px;
+}
+
+.story-banner__style_2 .story-content__text h2 {
+    font: 500 54px "Eina", sans-serif;
+}
+
+.story-banner__style_2 .story-content__text p {
+    font: 500 20px "Eina", sans-serif;
+}
+
+.banner-title__style {
+    padding: 168px 0 120px;
+}
+
+.banner-title__style .wrapper {
+    max-width: 1440px;
+    text-align: center;
+}
+
+.banner-title__style h2 {
+    font: 500 54px "Eina", sans-serif;
+    padding-bottom: 24px;
+}
+
+.banner-title__style p {
+    font: 500 20px/40px "Eina", sans-serif;
+    padding-bottom: 48px;
+}
+
 
 @media screen and (max-width:1700px) {
 
